--- a/irshad/sass/style.css
+++ b/irshad/sass/style.css
@@ -50,7 +50,7 @@ header {
 
 .navb-right {
   width: 500px;
-  margin-left: -100px;
+  margin-right: 50px;
 }
 
 .navb-right .container {
@@ -63,6 +63,9 @@ header {
   font-weight: bold;
   border: 1px solid orange;
   border-radius: 10%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 #chColor {
@@ -135,6 +138,18 @@ a:hover {
   transition: 1s;
 }
 
+.mt-6 ul {
+  list-style-type: none;
+}
+.mt-6 ul :hover, .mt-6 ul :focus {
+  color: orange;
+  font-weight: normal;
+}
+.mt-6 ul svg, .mt-6 ul .fa, .mt-6 ul .fa-solid, .mt-6 ul img {
+  margin-top: -5px;
+  margin-right: 5px;
+}
+
 .gallery {
   position: relative;
   z-index: -1;
@@ -159,7 +174,7 @@ a:hover {
 
 #search-input {
   height: 100%;
-  width: 500px;
+  width: 390px;
 }
 
 #search-button {
@@ -176,7 +191,7 @@ a:hover {
 }
 
 .buttons-right {
-  margin-left: 20px;
+  margin-left: 80px;
 }
 
 .buttons-right .container {
@@ -187,9 +202,6 @@ a:hover {
   height: 70px;
   width: 100px;
   margin-top: -20px;
-}
-.buttonItem .btn :hover {
-  color: yellow;
 }
 
 #greenButton {
